src/test/ui/attributes/key-value-expansion-on-mac.stderr
error: unexpected token: `stringify!(b)`
  --> $DIR/key-value-expansion-on-mac.rs:11:17
   |
LL | #[rustc_dummy = stringify!(b)]
   |                 ^^^^^^^^^^^^^

error: aborting due to previous error

